/*
 *              Copyright (c) 2016-2019, Nuralogix Corp.
 *                      All Rights reserved
 *
 *      THIS SOFTWARE IS LICENSED BY AND IS THE CONFIDENTIAL AND
 *      PROPRIETARY PROPERTY OF NURALOGIX CORP. IT IS
 *      PROTECTED UNDER THE COPYRIGHT LAWS OF THE USA, CANADA
 *      AND OTHER FOREIGN COUNTRIES. THIS SOFTWARE OR ANY
 *      PART THEREOF, SHALL NOT, WITHOUT THE PRIOR WRITTEN CONSENT
 *      OF NURALOGIX CORP, BE USED, COPIED, DISCLOSED,
 *      DECOMPILED, DISASSEMBLED, MODIFIED OR OTHERWISE TRANSFERRED
 *      EXCEPT IN ACCORDANCE WITH THE TERMS AND CONDITIONS OF A
 *      NURALOGIX CORP SOFTWARE LICENSE AGREEMENT.
 */
syntax = "proto3";

option cc_enable_arenas = true;
option java_package = "ai.nuralogix.dfx.status.v1";
option java_outer_classname = "Status";
option go_package = "bitbucket.org/nuralogix/dfx-protobuffs-go/dfx/status/v1;status";
option csharp_namespace = "Nuralogix.Dfx.Status.V1";

package dfx.status.v1;
 
enum MeasurementStatus {
  UNKNOWN_MEASUREMENT_STATUS = 0;
  IN_PROGRESS = 1;
  CANCELLED = 2;
  ERROR = 3;
  COMPLETE = 4;
  WARNING = 5;
}
